...
                android:lines="1"
                android:paddingLeft="10dp"
                android:textColor="#000"
                android:textColorHint="#000" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginTop="10dp"
                android:background="@drawable/register"
                android:text="Continue"
...
                    android:layout_below="@id/fpass"
                    android:layout_marginTop="40dp"/>
                <Button

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_register"
                    android:text="Sign Up"
                    android:layout_below="@id/nm"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/register"
                    android:textColor="#fff"/>

...
