...
                android:text="POST FEEDBACK"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/page_heading"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_rectangle_box"
                android:hint="Enter Your Feedback"
...
                android:textColor="#000"
                android:textColorHint="#000"
                />


            <Button
                android:id="@+id/btn_submit_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btnsuccess"
                android:layout_alignParentBottom="true"
                android:text="Submit"
...
